environments/dev/ingress/routes/cloudflare-public-routes/hugo-traefik-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: hugo-traefik
  namespace: web
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames: [hugo-traefik.thebestpractice.tech]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hugo
          kind: Service
          port: 80
